--- a/level1service/hello-world-srv/package.json
+++ b/level1service/hello-world-srv/package.json
@@ -7,10 +7,8 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^6",
-    "express": "^4"
-  },
-  "devDependencies": {
-    "sqlite3": "^5.1.2"
+    "express": "^4",
+    "hdb": "^0.19.5"
   },
   "scripts": {
     "start": "cds run",
@@ -50,7 +48,7 @@
       "db": {
         "kind": "sqlite",
         "credentials": {
-          "database": "sqlite.db"
+          "database": "db/sqlite.db"
         }
       }
     }
